Added historical data

--- a/IPBES.ipynb
+++ b/IPBES.ipynb
@@ -48,16 +48,21 @@
    },
    "outputs": [],
    "source": [
-    "scenarios = ('ssp1_rcp2.6_image', 'ssp3_rcp7.0_aim', 'ssp4_rcp3.4_gcam', 'ssp4_rcp6.0_gcam', 'ssp5_rcp8.5_remind-magpie')\n",
+    "scenarios = ('historical', 'ssp1_rcp2.6_image', 'ssp3_rcp7.0_aim', 'ssp4_rcp3.4_gcam', 'ssp4_rcp6.0_gcam', 'ssp5_rcp8.5_remind-magpie')\n",
     "plots = []\n",
     "for scenario in scenarios:\n",
     "    print(scenario)\n",
     "    row = []\n",
     "    for indicator in ('BIIAb', 'BIISR'):\n",
-    "        ssp, rcp, model = scenario.upper().split('_')\n",
-    "        p = figure(title='%s -- %s / %s' % (indicator, ssp, rcp))\n",
+    "        title = 'historical'\n",
+    "        base_url = \"http://ipbes.s3.amazonaws.com/summary/%s-%s-%s- 900-2014.csv\"\n",
+    "        if scenario != 'historical':\n",
+    "            ssp, rcp, model = scenario.upper().split('_')\n",
+    "            title = '%s -- %s / %s' % (indicator, ssp, rcp)\n",
+    "            base_url = \"http://ipbes.s3.amazonaws.com/summary/%s-%s-%s-2015-2100.csv\"\n",
+    "        p = figure(title=title)\n",
     "        p.y_range = Range1d(0.45, 1)\n",
-    "        base_url = \"http://ipbes.s3.amazonaws.com/summary/%s-%s-%s-2015-2100.csv\"\n",
+    "        print(base_url % (scenario, indicator, 'subreg'))\n",
     "        s = requests.get(base_url % (scenario, indicator, 'subreg')).content\n",
     "        df = pd.read_csv(io.StringIO(s.decode('utf-8')))\n",
     "        #df = pd.read_csv('ipbes-upload/%s-%s-subreg-2015-2100.csv' % (scenario, indicator))\n",
