More removal of predictify

--- a/Abundance.ipynb
+++ b/Abundance.ipynb
@@ -53,7 +53,7 @@
     "from projections.rasterset import RasterSet, Raster\n",
     "from projections.simpleexpr import SimpleExpr\n",
     "import projections.r2py.modelr as modelr\n",
-    "import projections.predicts as predicts\n",
+    "from projections.r2py import pythonify\n",
     "import projections.utils as utils\n"
    ]
   },
@@ -91,11 +91,11 @@
    "source": [
     "modf = modelr.load('ab-fst-1.rds')\n",
     "intercept_f = modf.intercept\n",
-    "predicts.predictify(modf)\n",
+    "pythonify(modf)\n",
     "\n",
     "modn = modelr.load('ab-nfst-1.rds')\n",
     "intercept_n = modn.intercept\n",
-    "predicts.predictify(modn)"
+    "pythonify(modn)"
    ]
   },
   {
