Remove local copy of rasterset and install from Github instead

--- a/Abundance.ipynb
+++ b/Abundance.ipynb
@@ -50,8 +50,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from projections.rasterset import RasterSet, Raster\n",
-    "from projections.simpleexpr import SimpleExpr\n",
+    "from rasterset import RasterSet, Raster, SimpleExpr\n",
+
     "import projections.r2py.modelr as modelr\n",
     "from projections.r2py import pythonify\n",
     "import projections.utils as utils\n"
